fix: updated crop box hiding logic; added scale calculation to lnadnark drawing for frame nav - crop box is not visible (z-index = -1) when the detect button is hidden - crop box is not hidden so dimesnions can be used for offset calculation - landmark circles scale to display size so they are not too large

--- a/pose/styles.css
+++ b/pose/styles.css
@@ -212,3 +212,6 @@ video {
     margin-top: 24px; 
 }
 
+[hidden] {
+    display: none !important;
+}
